Design: Hero section

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="shortcut icon" href="./assets/img/vk-favicon.png" type="image/x-icon">
     <!-- css links -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- icons from google material -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- icons from awesome material -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -31,14 +30,29 @@
             <div >
                 <button>Download Resume</button>
             </div>
-        
-        <div class="menu-icon">
-            <span class="material-symbols-outlined">
-                menu
-            </span>
-        </div>
+    
     </header>
     <!-- main content -->
+    <main>
+        <section class="hero-section">
+            <div class="hero-text">
+                <h3 title="Hello buddy 👋">Hi There,</h3>
+                <h1><span class="logo-text"><span class="blue-span">Vasanth</span>kumar S</span></h1>
+                <p class="grey-span">
+                    I develop Websites, software, ui Design and I love to code.❤️
+                </p>
+                <div class="social-icon">
+                    <a href="https://www.instagram.com/vasanthkumar_24/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://github.com/Vk2401" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/vasanthkumar-s-326527236/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+                <button class="btn">Read More</button>
+            </div>
+            <div class="hero-img">
+                <img src="./assets/img/hero-img.png" alt="vasanth portfolio cartoon image">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
