Design and responsive : About section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     </header>
     <!-- main content -->
     <main>
+        <!-- hero section -->
         <section class="hero-section">
             <div class="hero-text">
                 <h3 title="Hello buddy 👋">Hi There,</h3>
@@ -67,6 +68,30 @@
             </div>
             <div class="hero-img">
                 <img src="./assets/img/hero-img.png" alt="vasanth portfolio cartoon image">
+            </div>
+        </section>
+        <!-- about section -->
+        <section class="about-section">
+            <div class="img-div">
+                <img src="./assets/img/hero-img.png" alt="vasanthkumar image">
+            </div>
+            <div>
+                <!-- about me list -->
+
+                <ol>
+                    <li>
+                        <h1>I'm a <span class="blue-span">Developer</span> also a <span
+                                class="blue-span">Designer</span></h1>
+                    </li>
+                    <li><strong>Expirence : </strong>Starter</li>
+                    <li><strong>Quality : </strong> Developer,Editor,Content Creater,Designer</li>
+                    <li><strong>Place : </strong>Chennai,Tamilnadu, India</li>
+                    <li><strong>Email : </strong><a href="mailto:vipvasanth433@gmail.com">vipvasanth433@gmail.com</a>
+                    </li>
+                    <li><strong>Phone : </strong><a href="tel:+91 8610983674">+91 8610983674</a></li>
+                    <li><a href="#about"><button class="btn">Connect with me</button></a>
+                    </li>
+                </ol>
             </div>
         </section>
     </main>
