Design and responsive : Service section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </ul>
             </div>
             <div>
-                <button>Download Resume</button>
+                <a href="https://drive.google.com/file/d/164BfxS2BcTXPfFd3sinxmcMNIuRD2ikx/view?usp=drive_link" target="_blank"><button>Download Resume</button></a>
             </div>
 
         </div>
@@ -65,13 +65,38 @@
                             class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <a href="#about"><button class="btn">Read More</button></a>
+                
             </div>
             <div class="hero-img">
                 <img src="./assets/img/hero-img.png" alt="vasanth portfolio cartoon image">
             </div>
         </section>
+        <!-- service section -->
+        <section class="service-section">
+            <h1>My <span class="blue-span">Services</span></h1>
+            <div class="service-cards-container">
+                <div class="service-card">
+                    <i class="fa-solid fa-earth-asia"></i>
+                    <h4>Web Developer</h4>
+                    <p>I make a websites and webapp to digitalize you.</p>
+                    <a href="https://github.com/Vk2401" target="_blank">view demo</a>
+                </div>
+                <div class="service-card">
+                    <i class="fa-solid fa-shapes"></i>
+                    <h4>Designer</h4>
+                    <p>I Design - Banners, Logo, website, app.</p>
+                    <a href="https://codepen.io/Vasanth-Kumar-s-the-selector" target="_blank">view demo</a>
+                </div>
+                <div class="service-card">
+                    <i class="fa-solid fa-icons"></i>
+                    <h4>Content Creater</h4>
+                    <p>I make videos in social media to document My Life.</p>
+                    <a href="https://www.instagram.com/vasanthkumar_24/" target="_blank">view demo</a>
+                </div>
+            </div>
+        </section>
         <!-- about section -->
-        <section class="about-section">
+        <section class="about-section" id="about">
             <div class="img-div">
                 <img src="./assets/img/hero-img.png" alt="vasanthkumar image">
             </div>
@@ -84,12 +109,12 @@
                                 class="blue-span">Designer</span></h1>
                     </li>
                     <li><strong>Expirence : </strong>Starter</li>
-                    <li><strong>Quality : </strong> Developer,Editor,Content Creater,Designer</li>
+                    <li><strong>Who I'm : </strong> Developer,Editor,Content Creater,Designer</li>
                     <li><strong>Place : </strong>Chennai,Tamilnadu, India</li>
                     <li><strong>Email : </strong><a href="mailto:vipvasanth433@gmail.com">vipvasanth433@gmail.com</a>
                     </li>
                     <li><strong>Phone : </strong><a href="tel:+91 8610983674">+91 8610983674</a></li>
-                    <li><a href="#about"><button class="btn">Connect with me</button></a>
+                    <li><a href="https://linktr.ee/Vasanthkumar24" target="_blank"><button class="btn">Connect with me</button></a>
                     </li>
                 </ol>
             </div>
