Design and responsive:contact section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 </ul>
             </div>
             <div>
-                <a href="https://drive.google.com/file/d/164BfxS2BcTXPfFd3sinxmcMNIuRD2ikx/view?usp=drive_link" target="_blank"><button>Download Resume</button></a>
+                <a href="https://drive.google.com/file/d/164BfxS2BcTXPfFd3sinxmcMNIuRD2ikx/view?usp=drive_link"
+                    target="_blank"><button>Download Resume</button></a>
             </div>
 
         </div>
@@ -65,7 +66,7 @@
                             class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <a href="#about"><button class="btn">Read More</button></a>
-                
+
             </div>
             <div class="hero-img">
                 <img src="./assets/img/hero-img.png" alt="vasanth portfolio cartoon image">
@@ -114,10 +115,22 @@
                     <li><strong>Email : </strong><a href="mailto:vipvasanth433@gmail.com">vipvasanth433@gmail.com</a>
                     </li>
                     <li><strong>Phone : </strong><a href="tel:+91 8610983674">+91 8610983674</a></li>
-                    <li><a href="https://linktr.ee/Vasanthkumar24" target="_blank"><button class="btn">Connect with me</button></a>
+                    <li><a href="https://linktr.ee/Vasanthkumar24" target="_blank"><button class="btn">Connect with
+                                me</button></a>
                     </li>
                 </ol>
             </div>
+        </section>
+        <section class="contact-section" id="contact">
+            <h1>My <span class="blue-span">Contact</span></h1>
+            <form action="#">
+
+                <input type="text" name="userName" placeholder="Your Name">
+                <input type="email" name="email" placeholder="Email">
+                <textarea name="message" cols="30" rows="10" placeholder="Message"></textarea>
+                <button class="submit-btn">Submit</button>
+            </form>
+
         </section>
     </main>
 
