--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
 
         </section>
     </main>
+    <footer>
+        <p>Copyright &copy; 2023 - <a href="https://github.com/Vk2401" target="_blank">vasanthkumar s</a> - AllRights Reserved.</p>
+    </footer>
 
     <!-- script link only for menu toggle -->
     <script src="./assets/js/main.js"></script>
