added theme color changer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 </head>
 
 <body>
+    <!-- theme picket -->
+    <div class="theme-picker">
+        <input type="color" id="theme" title="select color theme">
+    </div>
     <!-- header content -->
     <header>
         <div>
@@ -134,7 +138,8 @@
         </section>
     </main>
     <footer>
-        <p>Copyright &copy; 2023 - <a href="https://github.com/Vk2401" target="_blank">vasanthkumar s</a> - AllRights Reserved.</p>
+        <p>Copyright &copy; 2023 - <a href="https://github.com/Vk2401" target="_blank">vasanthkumar s</a> - AllRights
+            Reserved.</p>
     </footer>
 
     <!-- script link only for menu toggle -->
