modified README and Theme picker

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             Reserved.</p>
     </footer>
 
-    <!-- script link only for menu toggle -->
+    <!-- script link only for menu toggle & theme picker -->
     <script src="./assets/js/main.js"></script>
 </body>
 
