design : padding for btn

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vasanthkumar s | portfolio</title>
+    <title>Vasanthkumar s | portfolio</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/img/vk-favicon.png" type="image/x-icon">
     <!-- css links -->
@@ -138,7 +138,7 @@
         </section>
     </main>
     <footer>
-        <p>Copyright &copy; 2023 - <a href="https://github.com/Vk2401" target="_blank">vasanthkumar s</a> - AllRights
+        <p>Copyright &copy; 2023 - <a href="https://github.com/Vk2401" target="_blank">Vasanthkumar s</a> - AllRights
             Reserved.</p>
     </footer>
 
